@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-09-08T08:18:32Z",
+  "timestamp" : "2023-09-08T16:19:23Z",
   "count_outdated" : 972,
   "uniques_outdated" : 613,
-  "count" : 997,
+  "count" : 998,
   "uniques" : 631,
   "clones" : [
     {
@@ -115,9 +115,9 @@
     },
     {
       "timestamp": "2023-09-08T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
